@@ -28,18 +28,18 @@ if [ `hostname | cut -c 1-2` == "br" ]; then
         myCC=mpiicc
         myCXX=mpiicpc
         myFC=mpiifort
-        myDataspaces=${HOME}/envs/Dataspacesroot_intel
-        myFlexpath=${HOME}/envs/Flexpath_intel
-        myprefix=${HOME}/envs/ADIOSroot_intel
+        myDataspaces=${HOME}/envs/Dataspacesroot
+        myFlexpath=${HOME}/envs/Flexpath
+        myprefix=${HOME}/envs/ADIOSroot
 
     else
         echo "using gnu compiler with mvapich"
         myCC=mpicc
         myCXX=mpicxx
         myFC=mpif90
-        myDataspaces=${HOME}/envs/Dataspacesroot
-        myFlexpath=${HOME}/envs/Flexpath
-        myprefix=${HOME}/envs/ADIOSroot
+        myDataspaces=${HOME}/envs/Dataspacesroot_gnu_mvapich
+        myFlexpath=${HOME}/envs/Flexpath_gnu_mvapich
+        myprefix=${HOME}/envs/ADIOSroot_gnu_mvapich
     fi
     module list
 
